--- a/_publications/2019-08.md
+++ b/_publications/2019-08.md
@@ -2,8 +2,9 @@
 title: "Split property for free massless finite helicity fields"
 collection: publications
 permalink: /publication/2019-08
-date: 2019-08
+date: 2019-08-01
 venue: 'Annales Henri Poincaré'
 paperurl: 'https://arxiv.org/pdf/1806.04967.pdf'
+citation: 'Split property for free massless finite helicity fields, R. Longo, V. Morinelli, F. Preta, K. Rehren'
 ---
 
